# TTrade

./: .env.example  .gitignore  CLAUDE.md  com.ttrade.engine.plist  dashboard.html  pyproject.toml  wrangler.toml
.claude/: AI_GATEWAY.md
engine/: __init__.py  ai_analyst.py  ai_journal.py  backtest.py  broker.py  cli.py  config.py  crypto.py  db.py  executor.py  forecast.py  grid_executor.py  leverage.py  main.py  market_data.py  market_state.py  models.py  monitor.py  notifier.py  pipeline.py  reviewer.py  risk.py  risk_manager.py  scoring.py  sync.py  ta.py  volatility.py  weekly_report.py
engine/gates/: __init__.py  alignment.py  confirmation.py  cooldown_exposure.py  correlation.py  earnings.py  earnings_calendar.py  liquidity.py  loss_circuit_breaker.py  news_sentiment.py  options_volatility.py  position_construction.py  price_stability.py  pullback.py  regime.py  vix_circuit_breaker.py
scripts/: setup_keychain.sh  start.sh
tests/: conftest.py  test_broker.py  test_cli.py  test_config.py  test_db.py  test_executor.py  test_gates.py  test_integration.py  test_main.py  test_market_data.py  test_market_state.py  test_models.py  test_monitor.py  test_new_gates.py  test_notifier.py  test_pipeline.py  test_reviewer.py  test_risk_manager.py  test_scoring.py  test_sync.py  test_weekly_report.py
worker/: package-lock.json  package.json  tsconfig.json
worker/migrations/: 0001_init.sql  0002_ai_columns.sql
worker/src/: types.ts  worker.ts
worker/src/db/: schema.ts
worker/src/middleware/: auth.ts
worker/src/routes/: ai.ts  dashboard.ts  executions.ts  sync.ts  (+5 more)
