[project]
name = "ttrade"
version = "1.1.0"
description = "State-driven options trading engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "sqlmodel>=0.0.22",
    "yfinance>=0.2.40",
    "click>=8.1",
    "httpx>=0.27",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pyarrow>=16.0",
]

[project.scripts]
ttrade = "engine.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["engine*", "worker*"]

[tool.ruff]
target-version = "py312"
line-length = 100
